assets/css/style.css
    /* Necessary for full viewport background image*/
    html,
    body,
    header,
    .view {
        height: 100%;
    }

    html {
        scroll-behavior: smooth;
      }
      
    header {
        background-image: url("../images/bg-iceland.jpg");
        background-size: cover;
        background-position: center center;
        background-repeat: no-repeat;
    }

    @media (min-width: 800px) and (max-width: 850px) {
        .navbar:not(.top-nav-collapse) {
            background: #1C2331 !important;
        }
    }

    .navbar {
        background-color: rgba(0, 0, 0, .2)
    }

    .page-footer,
    .top-nav-collapse {
        background-color: #1C2331
    }

    
    /* #title { 
        display: -webkit-flex;
        display: flex;
        -webkit-align-items: center;
        align-items: center;
        -webkit-justify-content: center;
        justify-content: center;
      } */

      #title {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
       }
       
    #line{
        margin: 0em;
        border-width: 1px;
        background-color: rgba(0, 0, 0, 0.61);
        width:45%;
        margin-left:27.5%;
        margin-right:27.5%
    }
    
    #name {
        color: white; 
        font-weight: bolder;
        font-size: 4.5em;
        line-height: 1.5;
        font-family: 'Roboto', sans-serif;
    }
    
    #position {
        color: white;
        font-size: 2.5em;
        line-height: 1.5;
        font-family: 'Roboto', sans-serif;
    }

    #projects {
        padding-top: 50px;
        line-height: 1.5;
        font-family: 'Roboto', sans-serif;
        font-size: 3em;
    }

    #contact {
        padding-top: 40px;
    }
    
    #phoneNumber {
        padding-top: 10px;
    }

    @media only screen and (max-width:768px) {
        .navbar {
            background-color: #1C2331
        }
        #line {
            width:80%;
            margin-left:10%;
            margin-right:10%
        }
    
        #name {
            font-size: 3em;
        }
    
        #position {
            font-size: 1.5em;
        }

        #submit {
            margin-bottom: 15px;
        }
    }
    
    .honeypot-field {
        display: none;
      }

    .contact_form {
        border: 1px solid #ededed;
        box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1);
        background-color: #f2f3f5;
        padding: 40px 30px;
        border-radius: 5px;
        color: #bcbcbc;
    }
    
    .contact_form .form-control {
        background-color: #000000;
        margin-bottom: 30px;
        border: 1px solid #ebebeb;
        box-sizing: border-box;
        color: #bcbcbc;
        font-size: 16px;
        outline: 0 none;
        padding: 10px 25px;
        height: 55px;
        resize: none;
        box-shadow: none !important;
        width: 100%;
    }
    
    .contact_form textarea {
        color: #bcbcbc;
        padding: 20px 25px !important;
        height: 160px !important;
    }
    
    .contact_form .form-control::-webkit-input-placeholder {
        color: #bcbcbc;
    }
    
    .contact_form .form-control::-moz-placeholder {
        opacity: 1;
        color: #bcbcbc;
    }
    
    .contact_form .form-control::-ms-input-placeholder {
        color: #bcbcbc;
    }

    .contact_form {
        background-color: #111111;
        border: 0;
        border-bottom: 2px solid #1f1f1f !important;
    }

    .contact_form .form-control {
        background-color: #000;
        border: 0;
        border-bottom: 2px solid #1f1f1f !important;
    }
    
    .contact_form .btn.subt{
        background: #bb9d52;
    }

    .banner {
        display: flex;
        align-items: center;
        text-align: center;
      }
      
    .banner-body p {
    display: inline-block;
    }
    
    .banner-body i {
    margin-top:5px;
    padding: 0 6px;
    }
    
    .banner-body {
        padding: 5px 5px;
    }

    .spinner {
        margin: 20px auto 0;
        width: 70px;
        text-align: center;
      }
      
      .spinner > div {
        width: 18px;
        height: 18px;
        background-color: #333;
      
        border-radius: 100%;
        display: inline-block;
        -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
        animation: sk-bouncedelay 1.4s infinite ease-in-out both;
      }
      
      .spinner .bounce1 {
        -webkit-animation-delay: -0.32s;
        animation-delay: -0.32s;
      }
      
      .spinner .bounce2 {
        -webkit-animation-delay: -0.16s;
        animation-delay: -0.16s;
      }
      
      @-webkit-keyframes sk-bouncedelay {
        0%, 80%, 100% { -webkit-transform: scale(0) }
        40% { -webkit-transform: scale(1.0) }
      }
      
      @keyframes sk-bouncedelay {
        0%, 80%, 100% { 
          -webkit-transform: scale(0);
          transform: scale(0);
        } 40% { 
          -webkit-transform: scale(1.0);
          transform: scale(1.0);
        }
      }
    

